gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-fn_align_dg.rs
#![crate_type = "lib"]

#[repr(align(16))] // { dg-error ".E0658." "" { target *-*-* } }
fn requires_alignment() {}

